--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,19 +62,19 @@ services:
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=changeme
-      - TRIPWIRE_DATABASE=tripwire
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - TRIPWIRE_DATABASE=${DB_NAME}
       - SDE_DATABASE=eve_dump
     entrypoint: sh -c "/tmp/init.sh && echo 'starting mysql...' && /docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
 
   # Development only - For database administration
-  adminer:
-    container_name: adminer
-    networks:
-      - tripwire
-    image: adminer
-    ports:
-      - 9000:8080
+  # adminer:
+  #   container_name: adminer
+  #   networks:
+  #     - tripwire
+  #   image: adminer
+  #   ports:
+  #     - 9000:8080
 
 volumes:
   mysql-data:
