Implemented proper mine types and journey planner loading

--- a/.docker/dev/nginx.conf
+++ b/.docker/dev/nginx.conf
@@ -45,10 +45,11 @@ http {
 
   # Define the MIME types for files.
   include       /etc/nginx/mime.types;
+  types { application/wasm wasm; }
   default_type  application/octet-stream;
 
   # Update charset_types due to updated mime.types
-  charset_types text/css text/plain text/vnd.wap.wml application/javascript application/json application/rss+xml application/xml;
+  charset_types text/css text/plain text/vnd.wap.wml application/javascript application/json application/rss+xml application/xml application/wasm;
 
   # Speed up file transfers by using sendfile() to copy directly
   # between descriptors rather than using read()/write().
@@ -226,4 +227,5 @@ http {
   # See doc/sites-enabled.md for more info.
   # include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites_enabled/*.conf;
+
 }
