--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -24,6 +24,7 @@ http {
     types_hash_max_size 2048;
 
     include             /etc/nginx/mime.types;
+    types { application/wasm wasm; }
     default_type        application/octet-stream;
 
     # Load modular configuration files from the /etc/nginx/conf.d directory.
