--- a/.docker/dev/php.ini
+++ b/.docker/dev/php.ini
@@ -8,6 +8,7 @@ cgi.fix_pathinfo=1
 fastcgi.impersonate=1
 fastcgi.logging=0
 request_terminate_timeout = 300
+display_errors = On
 
 [Date]
 date.timezone="UTC"
