--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   # TRAEFIK SERVICE
   #################################################################
   traefik:
-    image: traefik:latest
+    image: traefik:v3.2.3
     container_name: traefik
     ports:
       - "80:80"
